Fixed horizontal scroll

--- a/app/static/css/prism.css
+++ b/app/static/css/prism.css
@@ -7,7 +7,7 @@ pre[class*=language-] {
     font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
     font-size: 1em;
     text-align: left;
-    white-space: pre;
+    white-space: pre-wrap;
     word-spacing: normal;
     word-break: normal;
     word-wrap: normal;
@@ -18,7 +18,7 @@ pre[class*=language-] {
     -webkit-hyphens: none;
     -moz-hyphens: none;
     -ms-hyphens: none;
-    hyphens: none
+    hyphens: none;  
 }
 
 code[class*=language-] ::-moz-selection,
